--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,12 @@ services:
     environment:
       PORT: 9292
       RUBY_YJIT_ENABLE: 1
-      DB_POOL_SIZE: 10
       DB_HOST: postgres
+      DB_PORT: 5432
+      DB_NAME: fraud_detection_production
+      DB_USER: postgres
+      DB_PASSWORD: password
+      DB_POOL_SIZE: 10
       WEB_CONCURRENCY: 2
       RACK_ENV: production
       REDIS_HOST: redis
@@ -25,6 +29,7 @@ services:
     image: postgres
     container_name: postgres
     environment:
+      POSTGRES_DB: fraud_detection_production
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
     ports:
